--- a/src/app/dashboard/components/carreras/add-estudiantes/matricular-estudiantes-carrera/matricular-estudiantes-carrera.component.html
+++ b/src/app/dashboard/components/carreras/add-estudiantes/matricular-estudiantes-carrera/matricular-estudiantes-carrera.component.html
@@ -31,7 +31,7 @@
                 *matCellDef="let element"
                 matTooltip="Usuario"
                 class="name">
-                {{ element.nombres }} {{ element.apellidos }}
+                {{ element.apellidos }} {{ element.nombres }}
             </td>
         </ng-container>
         <!-- correo -->
