--- a/src/app/dashboard/components/carreras/add-estudiantes/add-estudiantes.component.html
+++ b/src/app/dashboard/components/carreras/add-estudiantes/add-estudiantes.component.html
@@ -22,7 +22,7 @@
 
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-        <!-- nombre de la carrera -->
+        <!-- nombre del estudiante -->
         <ng-container matColumnDef="nombre">
             <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombre">Nombre</th>
             <td
@@ -31,6 +31,18 @@
             matTooltip="Usuario"
             class="name">
                 {{ element.nombre }}
+            </td>
+        </ng-container>
+
+        <!-- correo del estudiante -->
+        <ng-container matColumnDef="correo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header id="correo">Correo</th>
+            <td
+            mat-cell
+            *matCellDef="let element"
+            matTooltip="Correo"
+            class="correo">
+                {{ element.correo }}
             </td>
         </ng-container>
 
