--- a/src/app/dashboard/components/users/users.component.html
+++ b/src/app/dashboard/components/users/users.component.html
@@ -5,49 +5,80 @@
         <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Placeholder">
         <mat-icon matSuffix>search</mat-icon>
         <mat-hint>puede buscar por cualquier campo</mat-hint>
-      </mat-form-field>
-      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-        <ng-container matColumnDef="apellidos">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header id="apellidos">Apellidos</th>
-          <td mat-cell *matCellDef="let element">{{ element.apellidos }}</td>
-        </ng-container>
-        <ng-container matColumnDef="nombres">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombres">Nombres</th>
-          <td mat-cell *matCellDef="let element">{{ element.nombres }}</td>
-        </ng-container>
-        <ng-container matColumnDef="correo">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header id="correo">Correo</th>
-          <td mat-cell *matCellDef="let element">{{ element.correo }}</td>
-        </ng-container>
-        <ng-container matColumnDef="perfil">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header id="correo">Perfil</th>
-          <td mat-cell *matCellDef="let element">{{ element.perfil |titlecase}}</td>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
-          <td mat-cell *matCellDef="let element">
-            <mat-checkbox
-              class="example-margin"
-              color="primary"
-              [checked]="element.admin"
-              (click)="check(ev)">
-                <mat-icon matSuffix>assignment_ind</mat-icon>
-                <span>admin?</span>
-            </mat-checkbox>
-            <button mat-stroked-button color="primary" (click)="openDialog(element)">
+    </mat-form-field>
+    <mat-checkbox
+      class="example-margin"
+      [(ngModel)]="activos"
+      (change)="verSoloActivos($event)"
+      color="primary">
+        Ver solo activos
+    </mat-checkbox>
+    <mat-checkbox
+      class="example-margin"
+      [(ngModel)]="inactivos"
+      (change)="verSoloInactivos($event)"
+      color="primary">
+        Ver solo inactivos
+    </mat-checkbox>
+    <table
+      mat-table [dataSource]="dataSource"
+      matSort
+      class="mat-elevation-z8"
+      aria-describedby="Listado de usuarios">
+
+      <ng-container matColumnDef="apellidos">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="apellidos">Apellidos</th>
+        <td mat-cell *matCellDef="let element">{{ element.apellidos }}</td>
+      </ng-container>
+      <ng-container matColumnDef="nombres">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombres">Nombres</th>
+        <td mat-cell *matCellDef="let element">{{ element.nombres }}</td>
+      </ng-container>
+      <ng-container matColumnDef="correo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="correo">Correo</th>
+        <td mat-cell *matCellDef="let element">{{ element.correo }}</td>
+      </ng-container>
+      <ng-container matColumnDef="eliminado">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="eliminado">estado</th>
+        <td mat-cell *matCellDef="let element">{{ element.eliminado ? 'dado de baja' : 'activo' }}</td>
+      </ng-container>
+      <ng-container matColumnDef="perfil">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="correo">Perfil</th>
+        <td mat-cell *matCellDef="let element">{{ element.perfil |titlecase}}</td>
+      </ng-container>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
+        <td mat-cell *matCellDef="let element">
+          <mat-checkbox
+            class="example-margin"
+            color="primary"
+            [checked]="element.admin"
+            (click)="check(ev)">
+              <mat-icon matSuffix>assignment_ind</mat-icon>
+              <span>admin?</span>
+          </mat-checkbox>
+          <button
+            mat-stroked-button
+            color="primary"
+            matTooltip="Editar usuario"
+            (click)="openDialog(element)">
               <mat-icon>edit</mat-icon>
-            </button>
-            <button mat-stroked-button color="secondary" (click)="deleteUser(element)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
+          </button>
+          <button
+            mat-stroked-button
+            color="warn"
+            matTooltip="Activar o desactivar usuario"
+            (click)="userInfo(element)">
+              <mat-icon>remove_circle</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
   
-      <mat-paginator
-        [pageSizeOptions]="[10, 15, 20]"
-        showFirstLastButtons
-      ></mat-paginator>
+    <mat-paginator
+      [pageSizeOptions]="[20, 50, 100]"
+      showFirstLastButtons
+    ></mat-paginator>
 </div>
