--- a/src/app/dashboard/components/chat/chat-std-view/chat-std-view.component.scss
+++ b/src/app/dashboard/components/chat/chat-std-view/chat-std-view.component.scss
@@ -15,13 +15,41 @@ main {
 
 .general {
     margin: 1rem;
+    display: flex;
+    justify-content: space-between;
 
-    h1 {
-        margin-bottom: 0.5rem;
+    .info {
+        h1 {
+            margin-bottom: 0.5rem;
+        }
+    
+        p {
+            margin-bottom: 0;
+        }
     }
 
-    p {
-        margin-bottom: 0;
+    .btn-meet {
+        margin-right: 1rem;
+        padding: 1rem;
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        background-color: rgba(159, 228, 247, 0.3);
+        border-radius: 5px;
+
+        h3 {
+            font-weight: 500;
+            margin-bottom: 0.5rem;
+        }
+
+        p {
+            margin-top: 0.5rem;
+            
+            strong {
+                margin-bottom: 0.2rem;
+            }
+        }
+
     }
 }
 
